--- a/ThreadTrainingDays/pom.xml
+++ b/ThreadTrainingDays/pom.xml
@@ -3,11 +3,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>eu.websen</groupId>
-    <artifactId>ThreadTrainingDay1</artifactId>
+    <artifactId>ThreadTrainingDays</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
 
-    <name>ThreadTrainingDay1</name>
+    <name>ThreadTrainingDays</name>
 
     <properties>
         <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
